File Edit Options Buffers Tools Conf Help                                                                         
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "tensorflow==2.3.0",
    "h5py",
    "numpy==1.18.2",
    "logging",
    "scipy==1.4.1",
    "matplotlib==3.3.3"
]
build-backend = "setuptools.build_meta"
